tdf#167132: Reimplement SwWrtShell::InsertEnclosingChars

It used IDocumentContentOperations::ReplaceRange, and that created a
number of problems.

1. The method is documented to only work in a single node. That meant,
that trying to apply it on a selection over several paragraphs would
make odd things: it would replace the selected part only of the first
paragraph with the text of all the selected paragraphs, separated by
hard line breaks (and enclosed in the requested characters). In debug
builds, it would even fail an assert here.

2. It would replace all the content of the selection with just text,
removing objects.

3. The implementation didn't check if the operation is permitted.

4. The implementation didn't create a single undo operation, and for
a multi-selection, the operation would create multiple "replace" undo
entries.

This change re-implements it, trying to address these shortcomings.
- It checks if the operation is permitted, consistent with how other
methods there do it.
- It merges all changes inti a single undo operation (with a proper
description).
- It inserts the requested strings in the start and ent boundaries of
the selection, without replacing it. In this case, the start poses a
problem: insertion inherits the formatting from behind, so may give
the result having different formatting compared to the first selected
character. This is workarounded by inserting the start string after
the first character initially; then copying it (with its formatting)
to the correct place, and removing the temporary insertion.
-

Change-Id: Ie3bf4d961ff5de5d2687692dac230579a176b960
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187072
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187088